2009-01-28  Dan Williams  <dcbw@redhat.com>

	* src/nm-openvpn-service-openvpn-helper.c
		- (main): handle subnets correctly; TAP devices get their netmask
			from 'ifconfig_netmask', while TUN devices always use
			/32 becuase they are point-to-point

2009-01-28  Christoph Höger <choeger@cs.tu-berlin.de>

	* src/nm-openvpn-service.c
		- (real_connect, real_need_secrets): don't segfault if the
			connection type is invalid

2008-12-13  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	* src/nm-openvpn-service.h:
	* properties/auth-helpers.h:
	* auth-dialog/gnome-two-password-dialog.c:
	* auth-dialog/gnome-two-password-dialog.h: Cleared up gtk and glib includes
	to use only toplevel headers. Bug #564376.

2008-12-11  Dan Williams  <dcbw@redhat.com>

	* Split into separate repository

2008-10-28  Tambet Ingo  <tambet@gmail.com>

	Patch from Bin Li <libin.charles@gmail.com>.

	* properties/import-export.c (handle_path_item): Search for certificates
	from the directory where the configuration file is from.

2008-10-26  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
	  properties/import-export.c
	  properties/nm-openvpn.c
		- Update for setting accessor changes

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
		- (advanced_dialog_new): The "Certificates (TLS)" tab should also be
			present for NM_OPENVPN_CONTYPE_PASSWORD

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* properties/auth-helpers.c
		- (tls_default_filter, tls_file_chooser_filter_new): accept ".cer"
			extension too

2008-10-11  Dan Williams  <dcbw@redhat.com>

	* src/nm-openvpn-service-openvpn-helper.c
		- (main): handle route_vpn_gateway (requires NM svn r4169) (bgo #549196)

2008-09-30  Dan Williams  <dcbw@redhat.com>

	* properties/nm-openvpn-dialog.glade
		- Fix the User and CA certificate entries in Password TLS mode, they
			were swapped with their labels (rh #464765)
		- Move private key password entries below private key chooser