@@ -1,3 +1,14 @@
+2009-02-12  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Robert Vogelgesang <vogel@users.sourceforge.net>
+
+	* properties/auth-helpers.c
+	  properties/import-export.c
+	  properties/nm-openvpn-dialog.glade
+	  src/nm-openvpn-service.c
+	  src/nm-openvpn-service.h
+		- Handle HMAC authentication (--auth)
+
 2009-01-28  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-openvpn-service-openvpn-helper.c
